criando a pontuacao dos jogadores e a movimentacao da bolinha

--- a/regras_do_jogo.html
+++ b/regras_do_jogo.html
@@ -7,8 +7,10 @@
                 setInterval(executar, 1000 / 30);
             }
 
+            var posicaoJogador1 = posicaoJogador2 = 40;
             var posicaoBolaX = posicaoBolaY = 10;
             var velocidadeBolaPosicaoX = velocidadeBolaPosicaoY = 5;
+            var pontuacaoJogador1 = pontuacaoJogador2 = 0;
 
             function executar() {
                 var folhaDesenho = document.getElementById("folha");
@@ -20,6 +22,11 @@
 
                 var diametroBola = 10;
 
+                var espessuraRaquete = 11;
+                var alturaRaquete = 100;
+
+                var efeitoRaquete = 0.3;
+
                 areaDesenho.fillStyle = "#286047"; //cor verde
 
                 areaDesenho.fillRect(0, 0, larguraCampo, alturaCampo);
@@ -30,6 +37,10 @@
 
                 //desenha a bola
                 areaDesenho.fillRect(posicaoBolaX - diametroBola / 2, posicaoBolaY - diametroBola / 2, diametroBola, diametroBola);
+
+                //raquetes
+                areaDesenho.fillRect(0, posicaoJogador1, espessuraRaquete, alturaRaquete);
+                areaDesenho.fillRect(larguraCampo - espessuraRaquete, posicaoJogador2, espessuraRaquete, alturaRaquete);
 
                 posicaoBolaX = posicaoBolaX + velocidadeBolaPosicaoX;
                 posicaoBolaY = posicaoBolaY + velocidadeBolaPosicaoY;
@@ -45,7 +56,36 @@
 
                 }
 
-                console.log("Tic-tac");
+                //verifica se o jogador 2 fez um ponto
+                if(posicaoBolaX < 0) {
+                    if(posicaoBolaY > posicaoJogador1 && posicaoBolaY < posicaoJogador1 + alturaRaquete) {
+                        //rebater a bola 
+                        velocidadeBolaPosicaoX = -velocidadeBolaPosicaoX;
+
+                        var diferencaY = posicaoBolaY - (posicaoJogador1 + alturaRaquete / 2);
+                        velocidadeBolaPosicaoY = diferencaY * efeitoRaquete;                       
+                    } else {
+                        //ponto do jogador 2
+                        pontuacaoJogador2 - pontuacaoJogador2 + 1;
+                        // colocar a bola no centro
+                    }
+                }
+
+                //verifica se o jogador 1 fez ponto
+                if(posicaoBolaX > larguraCampo) {
+                    if(posicaoBolaY > posicaoJogador2 && posicaoBolaY < posicaoJogador2 + alturaRaquete) {
+                        // rebater a bola
+                        velocidadeBolaPosicaoX = -velocidadeBolaPosicaoX;
+
+                        var diferencaY = posicaoBolaY - (posicaoJogador2 +  alturaRaquete / 2);
+                        velocidadeBolaPosicaoY = diferencaY * efeitoRaquete;
+                    } else {
+                        // pontos do jogador 1
+                        pontuacaoJogador1 = pontuacaoJogador1 + 1;
+
+                        //colocar a bola no centro
+                    }
+                }
             }
         </script>
     </body>
