--- a/regras_do_jogo.html
+++ b/regras_do_jogo.html
@@ -7,44 +7,45 @@
                 setInterval(executar, 1000 / 30);
             }
 
+            var folhaDesenho = document.getElementById("folha");
+            var areaDesenho = folhaDesenho.getContext("2d");
+            var larguraCampo = 600;
+            var alturaCampo = 500;
+            var espessuraRede = 5;
+
+            var diametroBola = 10;
+
+            var espessuraRaquete = 11;
+            var alturaRaquete = 100;
+
+            var efeitoRaquete = 0.3;
+            var velocidadeJogador2 = 5;
+
             var posicaoJogador1 = posicaoJogador2 = 40;
             var posicaoBolaX = posicaoBolaY = 10;
             var velocidadeBolaPosicaoX = velocidadeBolaPosicaoY = 5;
             var pontuacaoJogador1 = pontuacaoJogador2 = 0;
 
+            folhaDesenho.addEventListener('mousemove', function(e) {
+                posicaoJogador1 = e.clientY - alturaRaquete / 2;
+            });
+
             function executar() {
-                var folhaDesenho = document.getElementById("folha");
-                var areaDesenho = folhaDesenho.getContext("2d");
-
-                var larguraCampo = 600;
-                var alturaCampo = 500;
-                var espessuraRede = 5;
-
-                var diametroBola = 10;
-
-                var espessuraRaquete = 11;
-                var alturaRaquete = 100;
-
-                var efeitoRaquete = 0.3;
-
+                
                 areaDesenho.fillStyle = "#286047"; //cor verde
-
                 areaDesenho.fillRect(0, 0, larguraCampo, alturaCampo);
-
                 areaDesenho.fillStyle = "#ffffff"; // cor branca
-
                 areaDesenho.fillRect(larguraCampo / 2 - espessuraRede / 2, 0, espessuraRede, alturaCampo);
-
                 //desenha a bola
                 areaDesenho.fillRect(posicaoBolaX - diametroBola / 2, posicaoBolaY - diametroBola / 2, diametroBola, diametroBola);
-
                 //raquetes
                 areaDesenho.fillRect(0, posicaoJogador1, espessuraRaquete, alturaRaquete);
                 areaDesenho.fillRect(larguraCampo - espessuraRaquete, posicaoJogador2, espessuraRaquete, alturaRaquete);
-
+                //escrever a pontuação dos jogadores
+                areaDesenho.fillText("Humano - " + pontuacaoJogador1 + "pontos", 100, 100);
+                areaDesenho.fillText("Computador - " + pontuacaoJogador2 + " pontos", larguraCampo - 200, 100);
                 posicaoBolaX = posicaoBolaX + velocidadeBolaPosicaoX;
                 posicaoBolaY = posicaoBolaY + velocidadeBolaPosicaoY;
-
                 //verifica lateral superior
                 if(posicaoBolaY < 0 && velocidadeBolaPosicaoY < 0) {
                     velocidadeBolaPosicaoY = -velocidadeBolaPosicaoY;
@@ -67,7 +68,12 @@
                     } else {
                         //ponto do jogador 2
                         pontuacaoJogador2 - pontuacaoJogador2 + 1;
+
                         // colocar a bola no centro
+                        posicaoBolaX = larguraCampo / 2;
+                        posicaoBolaY = alturaCampo / 2;
+                        velocidadeBolaPosicaoX = -velocidadeBolaPosicaoX;
+                        velocidadeBolaPosicaoY = 3;
                     }
                 }
 
@@ -84,7 +90,17 @@
                         pontuacaoJogador1 = pontuacaoJogador1 + 1;
 
                         //colocar a bola no centro
+                        posicaoBolaX = larguraCampo / 2;
+                        posicaoBolaY = alturaCampo / 2;
+                        velocidadeBolaPosicaoX = -velocidadeBolaPosicaoX;
+                        velocidadeBolaPosicaoY = 3;
                     }
+                }
+                //atualiza a posicao do jogador 2
+                if(posicaoJogador2 + alturaRaquete / 2 < posicaoBolaY) {
+                    posicaoJogador2 = posicaoJogador2 + velocidadeJogador2;
+                } else {
+                    posicaoJogador2 = posicaoJogador2 - velocidadeJogador2;
                 }
             }
         </script>
